# ws-fabric

./: .gitignore  CHARTER.md  Cargo.toml  DOCKSIDE-EXAM.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  TESTING_STRATEGY.md  USER_GUIDE.md
examples/: basic_client.rs  basic_server.rs  configured_client.rs  connection_pool.rs  echo_server.rs  fragmentation.rs  rate_limiting.rs  subprotocol_negotiation.rs
src/: backpressure.rs  client.rs  compression.rs  config.rs  error.rs  fragmentation.rs  headers.rs  heartbeat.rs  lib.rs  message.rs  metrics.rs  pool.rs  ratelimit.rs  reconnect.rs  server.rs  subprotocol.rs
tests/: connection_tests.rs  integration_test.rs  integration_tests.rs  message_tests.rs  performance_tests.rs  server_tests.rs  stress_tests.rs
tests/benches/: concurrent_connections.rs  memory_usage.rs  message_bench.rs  message_latency.rs  throughput.rs
