[package]
name = "websocket-fabric"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance Team"]
description = "High-performance WebSocket library with connection pooling, reconnection, and backpressure handling"
license = "MIT"
repository = "https://github.com/superinstance/websocket-fabric"
keywords = ["websocket", "real-time", "networking", "async"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.26"
tungstenite = "0.24"
futures-util = "0.3"
thiserror = "2.0"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
crossbeam = "0.8"
arc-swap = "1.7"
url = "2.5"
http = "1.2"
base64 = "0.22"
sha1 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[lib]
name = "websocket_fabric"
path = "src/lib.rs"

# Benchmarks are in tests/benches directory
# [[bench]]
# name = "message_latency"
# harness = false
# path = "tests/benches/message_latency.rs"

# [[bench]]
# name = "throughput"
# harness = false
# path = "tests/benches/throughput.rs"

# [[bench]]
# name = "concurrent_connections"
# harness = false
# path = "tests/benches/concurrent_connections.rs"

# [[bench]]
# name = "memory_usage"
# harness = false
# path = "tests/benches/memory_usage.rs"
